Bug 834500: IonMonkey: Don't forbid ion compilation when JM is disabled and bouncing between IM and the interpreter, r=nbp